Pull request #509: Jdzubak MCA-4780 inappchat sync action
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4780-inappchat-sync-action to master

Squashed commit of the following:

commit 941c1ed05e2f13d52c8a034644365750a165620e
Merge: e2433da2 eeb6dd14
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 14:53:51 2025 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4780-inappchat-sync-action

commit e2433da263386754846981b4adb6a309cf76b61d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 14:50:18 2025 +0200

    MCA-4780 InAppChat sync actions

commit 806df954a65c88a54ce96c8eb4759e4ea2c385d0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 11:01:18 2025 +0200

    MCA-4780 InAppChat sync actions

commit 73c08ac4085ae9fe89abb2c2ee709bb5ab1e08f7
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Tue Jun 17 08:59:57 2025 +0000

    Applied suggestion

commit 5176db4caa6f592e98f6557bdf29977b31b92577
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 08:31:24 2025 +0200

    MCA-4780 InAppChat sync actions

commit 410b8ed6b495ae14544605cd5c10162af1941ec0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 08:25:46 2025 +0200

    MCA-4780 InAppChat sync actions

commit 33d3ff30fb39be1067cdcef02e9388ca68d4f061
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 07:23:51 2025 +0200

    MCA-4780 InAppChat sync actions

commit 9ec298201384a58834ba2056e62d8b61f90bccf5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 07:22:03 2025 +0200

    MCA-4780 InAppChat sync actions

commit c0ca7fba00391a0aeae5a6bbb104d100eb32b8d4
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jun 16 16:32:11 2025 +0200

    MCA-4780 InAppChat sync actions

commit 9fe234177c5d6391a225dc80af33803192cdce7a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jun 16 16:32:10 2025 +0200

    Rename .java to .kt

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -54,6 +54,10 @@
             showFooter: false,
             showFab: false
         };
+
+        if (widgetTheme != null) {
+            setTheme(widgetTheme);
+        }
         liveChat('config', widgetConfig, function (error, result) {
             widgetApiCallback('config', error, result);
             if (!error) {
@@ -98,9 +102,6 @@
         function show() {
             liveChat('show', null, function (error, result) {
                 widgetApiCallback('show', error, result);
-                if (!error && widgetTheme != null) {
-                    setTheme(widgetTheme);
-                }
             });
             addLiveChatEventsListener();
         }
