Pull request #525: Jdzubak MCA-4845 chat errors handler
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4845-chat-errors-handler to master

Squashed commit of the following:

commit 666ef193e9e2814e3c38bd8fe0b16f341667c540
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 12 11:24:52 2025 +0200

    MCA-4931 Increased chat default loading timeout

commit ea4f67f45f7dd113dc33d25fe00636b0a73e3884
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 12 10:45:29 2025 +0200

    MCA-4931 Increased chat default loading timeout

commit 98eb7868b43936f98d3b8b9a661b8e671c4dcdc8
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Sep 11 12:23:20 2025 +0200

    MCA-4931 Increased chat default loading timeout

commit dd0f1edb88072f5325f493b6339664baf234d291
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Sep 10 09:29:48 2025 +0200

    MCA-4931 Lowered Kotlin version because of RN plugin

commit 7ac2995ad06bbe4fbbd311ab4b840aefca6b998d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Sep 9 21:21:18 2025 +0200

    MCA-4931 Livechat exception parsing

commit 18061a6baecb414bcab66c53f068353f60af4f5b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 5 15:05:15 2025 +0200

    MCA-4931 Removed not necessary check

commit 817a950724907a566e88753371b94b1a15811a4c
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 5 10:36:09 2025 +0200

    MCA-4931 Final touches

commit 0790c559769f2710b3e0432bba6ecefb80d371fc
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Sep 5 09:45:07 2025 +0200

    MCA-4931 Final touches

commit 8266587fa02ee4d7eaecc917f453a29b93f05ced
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Sep 2 11:04:26 2025 +0200

    MCA-4891 PoC

commit 8c9a626eb7014bc26164f40360d3f9dbb6617124
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Sep 1 17:05:52 2025 +0200

    MCA-4891 PoC

commit e156cd00ae2736337a1285377a71fb73c04a99fc
Author: Jakub Dz

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/livechat-widget.html
@@ -259,6 +259,9 @@
         }
 
         function stringify(value) {
+            if (value instanceof Error) {
+                return value.message;
+            }
             switch (typeof value) {
                 case 'string': case 'object': return JSON.stringify(value);
                 default: return String(value);
